swagger.json adjustment
