# controllers/usersController.js
@@ -32,10 +32,11 @@ const createUser = async (req, res) => {
     try {
         const db = mongodb.getDatabase();
         const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
             email: req.body.email,
-            username: req.body.username,
-            name: req.body.name,
-            ipaddress: req.body.ipaddress
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
         };
         const response = await db.collection('frontdb').insertOne(user);
         if (response.acknowledged) {
@@ -53,10 +54,11 @@ const updateUser = async (req, res) => {
         const userId = new ObjectId(req.params.id);
         const db = mongodb.getDatabase();
         const user = {
+            firstName: req.body.firstName,
+            lastName: req.body.lastName,
             email: req.body.email,
-            username: req.body.username,
-            name: req.body.name,
-            ipaddress: req.body.ipaddress
+            favoriteColor: req.body.favoriteColor,
+            birthday: req.body.birthday
         };
         const response = await db.collection('frontdb').replaceOne({ _id: userId }, user);
         if (response.modifiedCount > 0) {
